# quant-playground

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
notebooks/: 00_notebook.ipynb  01_risk_demo.ipynb  01_sharpe_demo.ipynb  02_Pricing_Options.ipynb  02_vol_scenarios.ipynb  03_delta_hedging.ipynb
src/qp/: __init__.py  bonds.py  derivatives.py  fixed_income.py  metrics.py  options.py  performance.py  risk.py
src/qp.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_bonds.py  test_derivatives.py  test_fixed_income.py  test_metrics.py  test_metrics_sharpe.py  test_options.py  test_performance.py  test_risk.py  test_risk_sharpe.py  test_risk_var.py
