[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qp"
version = "0.0.2"
description = "Quant playground"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "yfinance", 
    "matplotlib" 
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]              
extend-exclude = [".git", "__pycache__", ".venv", ".ipynb_checkpoints"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
